manifests/fixtime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixtime-ingress
  namespace: fixtime
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - fixtime.mrozy.org
      secretName: fixtime-tls
  rules:
    - host: fixtime.mrozy.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fixtime-backend
                port:
                  number: 8080
